"ChangeLog"

2007-08-12	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-46-chpsim-07-06:
	  configure.ac: replace docs/chpsim/figs/build_path with .dirstamp
	  hackt-config.in: use datarootdir


2007-08-11	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-46-chpsim-07-05:
	  Added scripts/extract_texinfo.awk.  Guess what it does.
	  Make.stddef: use extract_texinfo.awk


2007-08-08	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-45:
	  Make.global: more echo-* targets listed under help.


	* HACKT-00-01-04-main-00-81-44:
	  Make.stddef: directory variables moved to ...
	  installdirs.mk: some additional installation subdirectories, 
		intended as post-configure variables, for convenience.  
	  Makefile.am: distribute installdirs.mk


2007-07-31	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-41-merged-chpsim-06-26:
	  Branch merge of chpsim-06 branch: chpsim run-time function support.
	  Also includes some system-wide additions:
		addition of libltdl fr plug-in support
		improved support for installcheck targets
	  Updated bootstrap to support libltdl regeneration.
	  pkg/*.info: fink packaging deps updated (not tested)


2007-07-30	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-39-chpsim-06-25:
	  Make.stddef: define examplesdir for installing examples.  


	* HACKT-00-01-04-main-00-81-39-chpsim-06-23:
	  Make.stddef: define docdir, pdfdir, psdir, htmldir for installation.


2007-07-29	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-39-chpsim-06-22:
	  README.CVS: now list texinfo as a bootstrapper requirement.
	  README.maintainer: more backport tag conventions.
	  configure.ac, config/documentation.m4: check for ps2epsi
	  More documentation updates involving Texinfo in dox/ChangeLog.


2007-07-28	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-39-chpsim-06-21: