@@ -3,7 +3,7 @@
 # (Prior to 2005/06/19, this file was "configure.in", 
 #	in case one should want to trace back the CVS revision history.)
 #
-#	$Id: configure.ac,v 1.147.2.1 2007/08/12 19:43:57 fang Exp $
+#	$Id: configure.ac,v 1.147.2.2 2007/08/13 02:54:49 fang Exp $
 
 # Hint: Try running "autoscan" for suggestions on what should go in here.  
 # Results of autoscan appear in "configure.scan".  
@@ -515,6 +515,7 @@ AC_CONFIG_FILES([
 	test/chpsim/Makefile
 	test/chpsim/testlib/Makefile
 	test/chpsim/installtest/Makefile
+	test/chpsim/libinstalltest/Makefile
 	test/guile/Makefile
 	test/lib/Makefile
 	test/benchmarks/Makefile
