@@ -1,5 +1,5 @@
 @c "usage.texi"
-@c $Id: usage.texi,v 1.2.2.1 2007/08/11 23:32:01 fang Exp $
+@c $Id: usage.texi,v 1.2.2.2 2007/08/13 02:56:39 fang Exp $
 
 @node Usage
 @chapter Usage
@@ -73,7 +73,7 @@ Later options always override earlier options.
 @include options/dump-graph-alloc.texi
 @include options/dump-dot-struct.texi
 @include options/run.texi
-
+@include options/ack-loaded-fns.texi
 
 @c ****************************************************************************
 @node Graph Generation
