@@ -1,0 +1,11 @@
+# "TODO"
+#	$Id: TODO,v 1.1.2.1 2007/08/13 02:56:40 fang Exp $
+
+Functions to add:
+
+Logging and printing functions.
+Support for strings.
+Array selection function (vararg-like)
+
+Math library functions.
+
