@@ -1,0 +1,166 @@
+	0	0	0	null
+	10	7	0	
+	20	4	0	A?(a)
+	20	1	1	AS.S!(42)
+	20	5	0	B?(b)
+	20	8	2	BS.S!(31)
+	20	6	0	S?(s)
+	20	11	3	SS.S!(false)
+	30	3	0	
+updated channel(s): 
+chan(int<32>) Z = (31) [sent]
+watch:	40	2	0	Z!(zcond(s,a,b))
+updated channel(s): 
+chan(int<32>) Z = (31) [empty]
+watch:	40	13	4	ZZ.B?(ZZ.b)
+	50	7	0	
+	60	4	0	A?(a)
+	60	1	1	AS.S!(42)
+	60	5	0	B?(b)
+	60	10	2	BS.S!(0)
+	60	6	0	S?(s)
+	60	12	3	SS.S!(true)
+	70	3	0	
+updated channel(s): 
+chan(int<32>) Z = (42) [sent]
+watch:	80	2	0	Z!(zcond(s,a,b))
+updated channel(s): 
+chan(int<32>) Z = (42) [empty]
+watch:	80	13	4	ZZ.B?(ZZ.b)
+	90	7	0	
+	100	4	0	A?(a)
+	100	1	1	AS.S!(42)
+	100	5	0	B?(b)
+	100	9	2	BS.S!(11)
+	100	6	0	S?(s)
+	100	11	3	SS.S!(false)
+	110	3	0	
+updated channel(s): 
+chan(int<32>) Z = (11) [sent]
+watch:	120	2	0	Z!(zcond(s,a,b))
+updated channel(s): 
+chan(int<32>) Z = (11) [empty]
+watch:	120	13	4	ZZ.B?(ZZ.b)
+	130	7	0	
+	140	4	0	A?(a)
+	140	1	1	AS.S!(42)
+	140	5	0	B?(b)
+	140	8	2	BS.S!(31)
+	140	6	0	S?(s)
+	140	12	3	SS.S!(true)
+	150	3	0	
+updated channel(s): 
+chan(int<32>) Z = (42) [sent]
+watch:	160	2	0	Z!(zcond(s,a,b))
+updated channel(s): 
+chan(int<32>) Z = (42) [empty]
+watch:	160	13	4	ZZ.B?(ZZ.b)
+	170	7	0	
+	180	4	0	A?(a)
+	180	1	1	AS.S!(42)
+	180	5	0	B?(b)
+	180	10	2	BS.S!(0)
+	180	6	0	S?(s)
+	180	11	3	SS.S!(false)
+	190	3	0	
+updated channel(s): 
+chan(int<32>) Z = (0) [sent]
+watch:	200	2	0	Z!(zcond(s,a,b))
+updated channel(s): 
+chan(int<32>) Z = (0) [empty]
+watch:	200	13	4	ZZ.B?(ZZ.b)
+	210	7	0	
+	220	4	0	A?(a)
+	220	1	1	AS.S!(42)
+	220	5	0	B?(b)
+	220	9	2	BS.S!(11)
+	220	6	0	S?(s)
+	220	12	3	SS.S!(true)
+	230	3	0	
+updated channel(s): 
+chan(int<32>) Z = (42) [sent]
+watch:	240	2	0	Z!(zcond(s,a,b))
+updated channel(s): 
+chan(int<32>) Z = (42) [empty]
+watch:	240	13	4	ZZ.B?(ZZ.b)
+	250	7	0	
+	260	4	0	A?(a)
+	260	1	1	AS.S!(42)
+	260	5	0	B?(b)
+	260	8	2	BS.S!(31)
+	260	6	0	S?(s)
+	260	11	3	SS.S!(false)
+	270	3	0	
+updated channel(s): 
+chan(int<32>) Z = (31) [sent]
+watch:	280	2	0	Z!(zcond(s,a,b))
+updated channel(s): 
+chan(int<32>) Z = (31) [empty]
+watch:	280	13	4	ZZ.B?(ZZ.b)
+	290	7	0	
+	300	4	0	A?(a)
+	300	1	1	AS.S!(42)
+	300	5	0	B?(b)
+	300	10	2	BS.S!(0)
+	300	6	0	S?(s)
+	300	12	3	SS.S!(true)
+	310	3	0	
+updated channel(s): 
+chan(int<32>) Z = (42) [sent]
+watch:	320	2	0	Z!(zcond(s,a,b))
+updated channel(s): 
+chan(int<32>) Z = (42) [empty]
+watch:	320	13	4	ZZ.B?(ZZ.b)
+	330	7	0	
+	340	4	0	A?(a)
+	340	1	1	AS.S!(42)
+	340	5	0	B?(b)
+	340	9	2	BS.S!(11)
+	340	6	0	S?(s)
+	340	11	3	SS.S!(false)
+	350	3	0	
+updated channel(s): 
+chan(int<32>) Z = (11) [sent]
+watch:	360	2	0	Z!(zcond(s,a,b))
+updated channel(s): 
+chan(int<32>) Z = (11) [empty]
+watch:	360	13	4	ZZ.B?(ZZ.b)
+	370	7	0	
+	380	4	0	A?(a)
+	380	1	1	AS.S!(42)
+	380	5	0	B?(b)
+	380	8	2	BS.S!(31)
+	380	6	0	S?(s)
+	380	12	3	SS.S!(true)
+	390	3	0	
+updated channel(s): 
+chan(int<32>) Z = (42) [sent]
+watch:	400	2	0	Z!(zcond(s,a,b))
+updated channel(s): 
+chan(int<32>) Z = (42) [empty]
+watch:	400	13	4	ZZ.B?(ZZ.b)
+	410	7	0	
+	420	4	0	A?(a)
+	420	1	1	AS.S!(42)
+	420	5	0	B?(b)
+	420	10	2	BS.S!(0)
+	420	6	0	S?(s)
+	420	11	3	SS.S!(false)
+	430	3	0	
+updated channel(s): 
+chan(int<32>) Z = (0) [sent]
+watch:	440	2	0	Z!(zcond(s,a,b))
+updated channel(s): 
+chan(int<32>) Z = (0) [empty]
+watch:	440	13	4	ZZ.B?(ZZ.b)
+	450	7	0	
+	460	4	0	A?(a)
+	460	1	1	AS.S!(42)
+	460	5	0	B?(b)
+	460	9	2	BS.S!(11)
+	460	6	0	S?(s)
+	460	12	3	SS.S!(true)
+	470	3	0	
+updated channel(s): 
+chan(int<32>) Z = (42) [sent]
+watch:	480	2	0	Z!(zcond(s,a,b))
